--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,38 @@
 .form-container-register {
   padding: 5%;
 }
+
+.container-data {
+  background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container-cards {
+  display: flex;
+  padding: auto;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.container-cards-item {
+  padding: 5px;
+  margin: 10px;
+}
+
+
+
+.header {
+  background-color: aliceblue;
+  padding: 20px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.header button {
+  width: 10%;
+}
